k8/pipeline/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-island
  name: el-event-listener-island
  namespace: island-ci-cd-poc
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-event-listener-island
    weight: 100
  wildcardPolicy: None
